Aula 24 - Criação dos arquivos de Migration
Aula 25 - Inclusão do Middleware de Commit do Unit Of Work

--- a/src/CursoOnline.Web/Views/Curso/NovoOuEditar.cshtml
+++ b/src/CursoOnline.Web/Views/Curso/NovoOuEditar.cshtml
@@ -1,4 +1,4 @@
-﻿@model CursoOnline.Dominio.Cursos.CursoDto
+﻿@model CursoOnline.Dominio.Domain.CursoDto
 @{
     ViewData["Title"] = "Novo ou editar curso";
 }
