Seção 10 - Implementando testes E2E (End to End) com TestCafe

--- a/src/CursoOnline.Web/Views/Curso/NovoOuEditar.cshtml
+++ b/src/CursoOnline.Web/Views/Curso/NovoOuEditar.cshtml
@@ -1,4 +1,4 @@
-﻿@model CursoOnline.Dominio.Domain.CursoDto
+﻿@model CursoOnline.Dominio.Cursos.CursoDto
 @{
     ViewData["Title"] = "Novo ou editar curso";
 }
